  Command now defaults to applying only to available threads.  To
  restore previous behaviour of applying also to unavailable
  threads the option "-unavailable" is added.

* Add convenience variable `$_simd_lane`.

* Python API

  ** Added gdb.record.clear(). Clears the trace data of the current recording.
     This forces re-decoding of the trace for successive commands.

* MI changes

  ** New optional argument in '-var-create': lane mask

     Added a new optional argument to '-var-create' command.  If present,
     the command creates a list of variable objects, one per lane specified
     by the lane mask.

  ** New field in '-var-create' output: 'lane'

     If a var object is created for a thread with SIMD lanes, store the lane
     for which the value is evaluated.

  ** New field in '-thread-info': 'kernel-instance-id'

     Added a new thread field to the '-thread-info' command.  If the thread is
     stopped, available, and the kernel-instance-id is defined for its arch,
     the new field contains a string with an identifier for each thread and
     is unique per kernel submission.  The term `kernel` refers to a function
     that is submitted to and runs on an appropriate device, e.g. a GPU device.

  ** New field in '-thread-info': 'thread-workgroup'

     Added a new field to the '-thread-info' command.  If the thread is
     stopped, available, and the workgroup is defined for its arch,
     the new field contains a string with a three-dimensional tuple: "x, y, z"
     that denotes the coordinates of the thread workgroup.

  ** '-break-insert -l'

     Added optional -l <simd-lane-id> argument to MI command -break-insert.
     A lane can be specified only together with the thread: user must provide
     a thread with -p argument.

     MI result output for -break-insert command will also contain
     lane="simd-lane-id" information if -l argument was specified.

     Also the MI output of -break-list and -break-info commands will have